--- a/style.scss
+++ b/style.scss
@@ -755,4 +755,10 @@ footer {
 @import "highlights";
 @import "gitalk";
 
+.self_card{
+  box-shadow: 0px 5px 20px #999;
+  border-radius: 10px;
+  padding-left: 25px;
+  padding-bottom: 2px !important;
+}
 
