--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,8 +22,11 @@
     });
   </script>
   <script type="text/javascript" async
-    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    src="/OnceAc/src/js/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
+  <!-- <script type="text/javascript" async
+    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script> -->
 
   <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
 
