--- a/_includes/gitalk.html
+++ b/_includes/gitalk.html
@@ -7,7 +7,7 @@
           clientSecret: "{{ site.gitalk.clientSecret }}",
           repo: "{{ site.gitalk.repo }}",
           owner: "{{ site.gitalk.owner }}",
-          admin: ["{{ site.gitalk.owner }}"],
+          admin: "{{ site.gitalk.owner }}",
           id: window.location.pathname,      // Ensure uniqueness and length less than 50
           distractionFreeMode: false,  // Facebook-like distraction free mode
           title: "{{ page.title }}",
