--- a/_includes/gitalk.html
+++ b/_includes/gitalk.html
@@ -5,7 +5,8 @@
         const gitalk = new Gitalk({
           clientID: "{{ site.gitalk.clientID }}",
           clientSecret: "{{ site.gitalk.clientSecret }}",
-          repo: "{{ site.gitalk.repo }}",
+          // repo: "{{ site.gitalk.repo }}",
+          repo: "Gitalk",
           owner: "{{ site.gitalk.owner }}",
           admin: ["{{ site.gitalk.owner }}"],
           id: window.location.pathname,      // Ensure uniqueness and length less than 50
