--- a/_includes/gitalk.html
+++ b/_includes/gitalk.html
@@ -6,7 +6,7 @@
           clientID: "{{ site.gitalk.clientID }}",
           clientSecret: "{{ site.gitalk.clientSecret }}",
           // repo: "{{ site.gitalk.repo }}",
-          repo: "Gitalk",
+          repo: "{{ site.gitalk.repo }}",
           owner: "{{ site.gitalk.owner }}",
           admin: ["{{ site.gitalk.owner }}"],
           id: window.location.pathname,      // Ensure uniqueness and length less than 50
