--- a/style.scss
+++ b/style.scss
@@ -760,6 +760,7 @@ footer {
   border-radius: 10px;
   padding-left: 25px;
   padding-bottom: 2px !important;
+  padding-right: 20px;
 }
 
 #search-input{
