--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -16,3 +16,7 @@
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="twitter:title" content="{{ page.title }}" />
     {% endif %}
+
+    {% if page.url == "/OnceAc/404" %}
+        <meta http-equiv="refresh" content="5; url=/OnceAc/">
+    {% endif %}
