--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -17,6 +17,6 @@
     <meta property="twitter:title" content="{{ page.title }}" />
     {% endif %}
 
-    {% if page.url == "/OnceAc/404/" %}
+    {% if page.url == "/OnceAc/404.html" %}
         <meta http-equiv="refresh" content="5; url=/OnceAc/">
     {% endif %}
